# coherence-gravity-coupling

./: .gitignore  .pre-commit-config.yaml  BSM_IMPLEMENTATION_SUMMARY.md  CITATION.cff  COMMIT_SUMMARY.md  CONVERGENCE_ANALYSIS.md  DEV_WORKFLOW.md  EXPERIMENTAL_PROTOCOL.md  INDEX.md  LATEST_PRODUCTION_SUMMARY.md  LATEST_PRODUCTION_SUMMARY_OLD.md  LICENSE  MANUSCRIPT_COMPLETION_SUMMARY.md  MANUSCRIPT_STATUS.md  Makefile  OPTIMIZER_COMPLETE.md  PROGRESS_SUMMARY.md  QUICKREF.md  README.md  RELEASE_SUMMARY.md  REPRODUCIBILITY.md  SESSION_NOTES_DevWorkflow.md  SESSION_NOTES_Oct17_2025_v2.md  SESSION_SUMMARY_Caching_DomainStudy.md  SESSION_SUMMARY_Oct17_2025.md  TEST_STATUS.md  VALIDATION_REPORT.md  ZENODO_CHECKLIST.md  benchmark_solver.py  convert_annotations.py  data_manifest.csv  domain_padding_sweep.json  domain_sweep_61.json  environment.yml  generate_figures.py  monitor_validation.py  optimize_geometry.py  production_study.py  pyproject.toml  release_manifest.json  (+5 more)
benchmarks/: benchmark_results.json  solver_acceleration.py
data/: empirical_constraints.json
docs/: DEV_WORKFLOW.md  EFQS_NEXT_STEPS.md  EXPERIMENT_PROPOSAL.md  MODULE_PAPER_CROSSREF.md  PHASE_D_SUMMARY.md  REMAINING_TASKS.md  SESSION_NOTES_Jan2025_SolverOpt.md  SESSION_SUMMARY_Oct17_2025.md  SOLVER_PERFORMANCE_IMPROVEMENTS.md  TASK_COMPLETION_REPORT.md  api_reference.md  build_system.md  installation.md  mathematical_framework.md  weak_field_analysis.md
examples/: __init__.py  cavendish_bec_estimate.py  domain_bc_sweep.py  geometric_cavendish.py  point_mass_coherent_shell.py  refined_feasibility.py
(+133 files in other folders)
