[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coherence-gravity-coupling"
version = "0.2.0"
description = "3D Poisson solver for coherence-gravity coupling experiments"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "GitHub Copilot", email = "noreply@github.com"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    "black>=24.0",
    "isort>=5.13",
    "flake8>=7.0",
    "tox>=4.0",
    "pre-commit>=3.0",
]
amg = [
    "pyamg>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "examples*"]

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
